--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 20px 40px;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
