added subroutes for categories

--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -1,6 +1,7 @@
 .product-card-container {
   position: relative;
   width: 100%;
+  min-width: 215px;
   display: flex;
   flex-direction: column;
   height: 350px;
