--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -1,4 +1,4 @@
-.category-container {
+.directory-item-container {
   margin: 0 7.5px 15px;
   min-width: 30%;
   height: 240px;
@@ -37,7 +37,7 @@
     background-position: center;
   }
 
-  .category-body-container {
+  .directory-item-body {
     height: 90px;
     padding: 25px;
     display: flex;
